k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ip-lookup-service
  labels:
    app: ip-lookup
spec:
  selector:
    app: ip-lookup
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
      name: http
  type: ClusterIP
