k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ip-lookup-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: api.local.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ip-lookup-service
            port:
              number: 80
